v0.9.9
fix 分析revi的bug

v0.9.8
new 增加`show`命令，提供ddl功能
new 在配置中增加sql模板
mod 把`ddl`功能，从`diff`挪到`show`
mod 把 `-t`参数，为逗号分割的多值
pro `revi`不执行版本号查询sql
pro manual.sh脚本增加日志检查
pro 为COL模板增加缩进
fix Conn接口增加TableNotFound方法，处理tree中不存在的表
fix `revi`不识别format后换行的版本号脚本

v0.9.7
增加`SEQ|TBL`指令，以支持分表的操作。
增加sqlx解析的后置检查。
`revi`和`exec`支持`SEQ和TBL`
`tree` 全面支持所有指令
`diff`先排序，再差分，有序输出。
增加测试手册脚本，可做回归测试。

v0.9.6
增加`VAR`指令，相当于`REF`，但不`挂树`。
调整`RUN|OUT`执行权重，只按行号排序。
调整`FOR|ONE|END`，引用的占位为NULL时，不执行。
`tree`增加统计信息输出。
控制端口，增加stat命令。
调整日志级别和退出
修复控制端口缺陷和bug
`sync`增加row选项，同步小表的数据。
增加`diff`的`col`用来比较除trigger外

v0.9.5
因kill有点吓人，参数`-k`变为`-t`
精简输出，增加输出级别 `-l`
`ENV`中可执行SQL初始变量
`ENV`中增加内置变量 SRC-DB和OUT-DB
`RUN|OUT` 增加内置`ITSELF`表示独立执行。
少量bug修复，代码调整
修改README

v0.9.4
#3 从A复制schema到B

v0.9.3
#1 通过控制端口（高位TCP）检查单例执行。
#2 对Tree支持控制端口执行简单的控制命令。