@@ -22,6 +22,7 @@
  * 主键有分布式特征，无自增型。
  * SQL语句，必须有结束符，如`;`，否则认为是一组。
  * 当前只适配了MySql，可自行实现PG版。
+ * 正则Regexp为go标准库`re2`，有些高级功能不支持。
 
 `数据树(DataTree)` 指一堆有业务逻辑关联的树状或图状的数据。
 比如`demo/init/2.data.sql`中的关系，存在以下多个`1:N`关系。
@@ -39,8 +40,8 @@
 
 以下是开发和测试环境，得益于GoLang的优势，理论上应该跨平台。
 
- * ubuntu 16.04 
- * Go 1.11.2
+ * ubuntu 16.04/ mac 10.15.7 
+ * Go 1.11.2 / 1.16
  * MySQL (5.7.23)
  
 下列各命令的参数，大部分时通用的，所以举例中不重复介绍各参数。
@@ -191,11 +192,13 @@ ALTER TABLE `tx_outer_trknum`
  -c godbart.toml \
  -s prd_main \
  -t tbl,trg \
- 'tx_parcel' \
+ 'tx_[^$]+' \
 | tee prd_main-show-out.log
 ```
 模板在`godbart.toml`中的`sqltemplet`里配置，`key`就是`-t` 参数，多个时用`,`分割。
 模板使用的`变量`全都存在时，输出模板，全都不存在时不输出，其他则报错。
+
+因为不支持否定环视，所有已不包含`$`去除`$log`表。
 
 系统内置了以下`变量`，不想使用`${}`不可以省略，包含数组的模板会循环输出。
 
