@@ -1,7 +1,9 @@
 module github.com/trydofor/godbart
 
+go 1.16
+
 require (
-	github.com/go-sql-driver/mysql v1.4.1
-	github.com/pelletier/go-toml v1.2.0
-	github.com/urfave/cli v1.20.0
+	github.com/go-sql-driver/mysql v1.6.0
+	github.com/pelletier/go-toml v1.9.3
+	github.com/urfave/cli v1.22.5
 )
